# MCPROJECT

./: .replit  app.py  client_secret.json  credentials.json  pyproject.toml
